add：CSRF及其解决方案
add：CSRF及其解决方案

--- a/_posts/HTTP相关/2021-05-07-XSS 和 CSRF 攻击.md
+++ b/_posts/HTTP相关/2021-05-07-XSS 和 CSRF 攻击.md
@@ -190,3 +190,114 @@ XSS攻击 Cross Site Script ：即**跨域脚本攻击**（为和CSS区分，改
 |    child-src https:    | 框架（frame）：必须使用HTTPS协议加载                         |
 |       report-uri       | 告诉浏览器，应该把注入行为报告给哪个网址                     |
 
+## 跨站请求伪造 CSRF
+
+- 总结
+
+  1、要发起 CSRF 攻击需要具备三个条件
+
+  ​	目标站点存在【漏洞】
+
+  ​	用户要【登录】过目标站点
+
+  ​	黑客需要通过【第三方站点】发起攻击
+
+  2、如何防止 CSRF 攻击，主要有三种方式：
+
+  ​	充分利用好 Cookie 的 SameSite 属性
+
+  ​	验证请求的来源站点
+
+  ​	使用 CSRF Token
+
+  
+
+【定义】
+
+即 Cross Site Request Forgery，攻击者借助受害者的 Cookie 骗取服务器的信任以操作服务端数据。
+
+--> 改变在服务端的数据，而非窃取数据
+
+
+
+【特点】
+
+1、**不能拿到 Cookie**，也看不到 Cookie 的内容，仅仅是“冒用”
+
+2、向服务器提交操作，但是不直接窃取数据，对于**服务器返回的结果**，由于浏览器同源策略的限制，**攻击者也无法进行解析**
+
+3、攻击一般发起在第三方网站，而不是被攻击的网站；被攻击的网站无法防止攻击发生
+
+
+
+【步骤】
+
+1.用户登录受信任网站A，并在本地生成Cookie。
+
+2.在不登出A的情况下，访问危险网站B。
+
+
+
+【实现方式】
+
+1、打开黑客的站点后自动发起 Get 请求
+
+2、打开黑客的站点后自动发起 POST 请求
+
+3、引诱用户点击黑客站点上的链接
+
+
+
+【案例】
+
+跨站请求可以用各种方式：图片URL、超链接、CORS（跨域资源共享）、Form提交等等；
+
+受害者登录a.com，并保留了登录凭证（Cookie）--> 攻击者引诱受害者访问了b.com --> b.com 向 a.com 发送了一个请求：a.com/act=xx。浏览器会默认携带a.com的Cookie --> a.com接收到请求后，对请求进行验证，并确认是受害者的凭证，误以为是受害者自己发送的请求 --> a.com以受害者的名义执行了act=xx -->攻击完成，攻击者在受害者不知情的情况下，冒充受害者，让a.com执行了自己定义的操作。
+
+【定义】：
+
+即 Cross Site Request Forgery，攻击者借助受害者的 Cookie 骗取服务器的信任以操作服务端数据。
+
+-- 改变在服务端的数据，而非窃取数据
+
+【特点】：
+
+1、**不能拿到 Cookie**，也看不到 Cookie 的内容，仅仅是“冒用”；
+
+2、向服务器提交操作，但是不直接窃取数据，对于**服务器返回的结果**，由于浏览器同源策略的限制，**攻击者也无法进行解析**；
+
+3、攻击一般发起在第三方网站，而不是被攻击的网站；被攻击的网站无法防止攻击发生；
+
+【步骤】：
+
+1.用户登录受信任网站A，并在本地生成Cookie。
+
+2.在不登出A的情况下，访问危险网站B。
+
+
+
+【实现方式】：
+
+1、打开黑客的站点后自动发起 Get 请求
+
+2、打开黑客的站点后自动发起 POST 请求
+
+3、引诱用户点击黑客站点上的链接
+
+
+
+【案例】：
+
+跨站请求可以用各种方式：图片URL、超链接、CORS（跨域资源共享）、Form提交等等；
+
+受害者登录a.com，并保留了登录凭证（Cookie）--> 攻击者引诱受害者访问了b.com --> b.com 向 a.com 发送了一个请求：a.com/act=xx。浏览器会默认携带a.com的Cookie --> a.com接收到请求后，对请求进行验证，并确认是受害者的凭证，误以为是受害者自己发送的请求 --> a.com以受害者的名义执行了act=xx -->攻击完成，攻击者在受害者不知情的情况下，冒充受害者，让a.com执行了自己定义的操作。<img src="/../img/assets_2019/image-20210507113716466.png" alt="image-20210507113716466" style="zoom:35%;" />
+
+### 防范措施
+
+| 方式                                                         | 解析                                                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 验证码 【体验差】                                            | 【优点】【最简洁而有效的防御方法 —辅助手段，不能给所有操作加验证码】 强制用户必须与应用进行交互，才能完成最终请求 |
+| 同源验证 Referer Check，HTTP 请求头中的一个字段              | 【Referer 记录了该 HTTP 请求的来源地址】<img src="/../img/assets_2019/image-20210507113804487.png" alt="image-20210507113804487" style="zoom:30%;" /> 服务端通过 Referer 可以检查请求是否来自合法的"源"：`if (req.headers.referer !== 'http://www.c.com/') { res.write('csrf 攻击’); return;}` |
+| Cookie 的 SameSite 属性 （在 **HTTP 响应头**中，通过 set-cookie 字段设置 Cookie 时，可以带上 SameSite 选项） | 禁止Cookie的发送 如果是从第三方站点发起的请求，那么需要浏览器禁止发送某些关键 Cookie 数据到服务器； 如果是同一个站点发起的请求，那么就需要保证 Cookie 数据正常发送 |
+| 添加 token 验证 【工作量大】                                 | 【关键在于在请求中放入攻击者所不能伪造的信息，并且不存储于 Cookie 之中】服务器生成一个Token，并把这个Token利用算法加密，加密后的字符串植入到页面/session中。在页面加载时，在每个a标签和form标签中放入Token服务器验证Token是否正确 |
+| 双重Cookie验证                                               | 【优点】【无需使用Session，易于实施，可以在前后端统一拦截校验】           【缺点】【 Cookie中增加了额外的字段，如果有XSS攻击，该防御失效，使用该方案时确保整站HTTPS的方式】 利用CSRF攻击不能获取到用户Cookie的特点，我们可以要求请求携带一个Cookie中的值。在用户访问网站页面时，向请求域名注入一个Cookie，内容为随机字符串。在前端向后端发起请求时，取出Cookie，并添加到URL的参数中。后端接口验证Cookie中的字段与URL参数中的字段是否一致，不一致则拒绝。 |
